# WaterMarkGenerator

./: .gitignore  CMakeLists.txt  EasyWaterMark.pro  Readme.md  version.h.in
WaterMarkGenerator/: PictureDateExtracter.cpp  PictureDateExtracter.h  WaterMarkGenerator.cpp  WaterMarkGenerator.h
android/: AndroidManifest.xml  AndroidManifest.xml.bak  AndroidManifest.xml.in
android/src/org/qtproject/example/: ImageSaver.java
app/: MainWindowAndroid.cpp  MainWindowAndroid.h  MainWindowAndroid.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
application/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resource/: AndroidManifest.xml  android_release.keystore  inno.iss  resource.qrc
src/: Utils.cpp  Utils.h  WaterMarkDesc.cpp  WaterMarkDesc.h  WaterMarkGenerator.cpp  WaterMarkGenerator.h  WaterMarkHolder.cpp  WaterMarkHolder.h
